--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -32,7 +32,7 @@
   width: 20%;
 }
 .search-box {
-  width: 80%;
+  width: 60%;
   border: 2px solid rgba(0, 0, 0, 0.1);
   /*padding: 10px;*/
   border-radius: 50px;
@@ -53,7 +53,7 @@
   font-size: 15px;
 }
 .search-box span {
-  width: 20%;
+  /*width: 20%;*/
   opacity: 0.5;
   border-left: 2px solid rgba(0, 0, 0, 0.1);
   padding: 10px;
@@ -63,7 +63,7 @@
 }
 .search .cart span {
   position: absolute;
-  top: -10px;
+  top: -1px;
   right: 0px;
   width: 20px;
   height: 20px;
@@ -100,8 +100,9 @@
   margin-left: 10px;
 }
 header {
-  height: 8vh;
+  /* height: 8vh; */
   box-shadow: -1px 15px 17px -8px rgba(0, 0, 0, 0.1);
+  
 }
 header ul {
   line-height: 8vh;
@@ -111,7 +112,7 @@ header ul li {
 }
 header ul li a {
   transition: 0.5s;
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 400;
 }
 header ul li a:hover {
@@ -124,7 +125,7 @@ header ul li a:hover {
   display: none;
 }
 .search.active {
-  height: 12vh;
+  /* height: 12vh; */
   position: fixed;
   top: 0;
   z-index: 1000;
@@ -132,21 +133,58 @@ header ul li a:hover {
   background-color: #fff;
   box-shadow: -1px 11px 24px -11px rgba(0, 0, 0, 0.2);
   transition: 0.5s;
+  overflow: hidden;
 }
+  
 
-@media (max-width: 768px) {
+/* Mobile devices */
+/* @media only screen and (max-width: 600px) {
+  .container {
+    flex-direction: column;
+ 
+
+  .left,
+  .right {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+} */
+
+/* Tablets and small desktops */
+/* @media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .head {
+    background-color: #0f3460;
+    padding: 5px 0;
+    color: #fff;
+  }
+  
+  .head i {
+    margin-right: 20px;
+  }
+  .head label {
+    margin-right: 20px;
+    font-size: 15px;
+  }
+  
+  .left,
+  .right {
+    
+  }
+} */
+
+@media (max-width: 800px) {
   header ul {
     padding-top: 30px;
   }
   .nav-links-mobile {
-    position: absolute;
+    position: absolute !important;
     display: block;
     list-style: none;
     box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     left: 0;
     top: 0;
     transition: all 0.5s ease-in-out;
-    width: 60%;
+    width: 100%;
     height: 100vh;
     background-color: white;
     z-index: 888;
@@ -159,20 +197,19 @@ header ul li a:hover {
   }
   header .link {
     display: none;
-  }
+  } 
   .close,
   .open {
-    position: absolute;
-    top: 35px;
-    right: 20px;
+    position: relative;
+   
     color: #ff014f;
     display: block;
     font-size: 25px;
     z-index: 999;
   }
-  .close {
+  /* .close {
     right: 45%;
-  }
+  } */
   .close.home-btn {
     background: linear-gradient(145deg, #e2e8ec, #ffffff);
     color: #ff014f;
@@ -182,7 +219,7 @@ header ul li a:hover {
     height: 60px;
     line-height: 60px;
   }
-  .header.active {
+  /* .header.active {
     height: 10vh;
-  }
+  } */
 }
