--- a/src/components/shops/style.css
+++ b/src/components/shops/style.css
@@ -57,3 +57,17 @@
 .shop .product:hover {
   box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
 }
+@media (max-width: 640px){
+  .grid1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    
+  }
+  .sh{
+    flex-direction: column;
+  }
+  .sh1{
+    width: 100% !important;
+  }
+}
