--- a/src/components/top/style.css
+++ b/src/components/top/style.css
@@ -29,3 +29,9 @@
   position: absolute;
   right: 0;
 }
+@media (max-width: 640px){
+  .av{
+    display: flex;
+    flex-direction: column;
+  }
+}
